Regression: contact shadows doesn't update in sculpt mode #104040

Closed
opened 2023-01-21 01:17:44 +01:00 by Nahuel Belich · 8 comments

System Information
Operating system: Linux-5.15.0-58-generic-x86_64-with-glibc2.35 64 Bits
Graphics card: NVIDIA GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 470.161.03

Blender Version
Broken: version: 3.3, 3.5.0 Alpha, branch: master, commit date: 2023-01-20 21:34, hash: 453724894e
Worked: 3.2
Caused by 285a68b7bb

Short description of error
contact shadows doesn't update in sculpt mode

Exact steps for others to reproduce the error
1-enter sculpt mode
2-Sculpt a high bump like in the video above
3-Exit sculpt mode to update the shadow
contact shadows sculpt.blend
Screencast from 20-01-23 21:08:14.webm

**System Information** Operating system: Linux-5.15.0-58-generic-x86_64-with-glibc2.35 64 Bits Graphics card: NVIDIA GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 470.161.03 **Blender Version** Broken: version: 3.3, 3.5.0 Alpha, branch: master, commit date: 2023-01-20 21:34, hash: `453724894e` Worked: 3.2 Caused by 285a68b7bb **Short description of error** contact shadows doesn't update in sculpt mode **Exact steps for others to reproduce the error** 1-enter sculpt mode 2-Sculpt a high bump like in the video above 3-Exit sculpt mode to update the shadow [contact shadows sculpt.blend](https://archive.blender.org/developer/F14180288/contact_shadows_sculpt.blend) [Screencast from 20-01-23 21:08:14.webm](https://archive.blender.org/developer/F14180286/Screencast_from_20-01-23_21_08_14.webm)
Author

Added subscriber: @NahuelBelich

Added subscriber: @NahuelBelich

Added subscriber: @TheRedWaxPolice

Added subscriber: @TheRedWaxPolice
Pratik Borhade changed title from contact shadows doesn't update in sculpt mode to Regression: contact shadows doesn't update in sculpt mode 2023-01-23 08:03:55 +01:00
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @JosephEagar

Added subscriber: @JosephEagar
Member

Caused by 285a68b7bb
@JosephEagar ^

Caused by 285a68b7bb @JosephEagar ^

This issue was referenced by 91263a8b8b

This issue was referenced by 91263a8b8baa5e107da717eb4b56ee51c2269636
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Joseph Eagar self-assigned this 2023-01-31 06:29:34 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#104040
No description provided.