Sculpt: Fix T104040: Always update eevee shadows in sculpt modes